--- a/css/style.css
+++ b/css/style.css
@@ -41,6 +41,7 @@
     --24px: 1.5rem;
     --30px: 1.875rem;
     --40px: 2.5rem;
+    --50px: 3.125rem;
     --80px: 5rem;
     --60px: 3.75rem;
     /* Colours */
@@ -451,6 +452,15 @@ header a:hover {
     padding-top: 0.5rem;
     color: var(--white-bg-h4)}
 
+
+/* Current Events */
+.events-raffle-winner h1 {
+    font: bold var(--50px) var(--space-mono);
+    text-align: center;
+    color: rgb(225, 241, 204);
+    padding: 2rem 0;
+}
+    
 /* Upcoming Events */
 .upcoming-events {
     margin: 0 auto;
